# coconut-svsm

./: .gitmodules  Cargo.toml  Contailerfile  mod.rs  repro  test.igvm  vfat-example.md
.cargo/: config.toml
.github/workflows/: Qemu.yml  qemu.yml  qemu_nocc_boot.sh
dump1/: table_data_xxd_0  table_data_xxd_2
igvmbuilder/: rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: address.rs  config.rs  error.rs  fw_cfg.rs  igvm_params.rs  lib.rs  raclients.rs  svsm.rs  svsm_paging.rs
kernel/src/acpi/: tables.rs
kernel/src/block/: api.rs  fat.rs  mod.rs  pflash.rs  ramdisk.rs  vfat_test.rs  virtio_blk.rs  virtio_blk_demo.rs
kernel/src/fs/: blockfs.rs  buffer.rs  mod.rs
kernel/src/greq/: pld_report.rs
kernel/src/locking/: spinlock.rs
kernel/src/mm/: address_space.rs  mod.rs  page_visibility.rs  pagetable.rs  ptguards.rs  shared_memory.rs
kernel/src/platform/: mod.rs  native.rs  snp.rs  tdp.rs
kernel/src/sev/: ghcb.rs
kernel/src/utils/: memory_region.rs
kernel/src/virtio/: devices.rs  hal.rs  mod.rs
kernel/src/vtpm/: mod.rs
libtcgtpm/: Makefile
rustdoc/: search-index.js  src-files.js
rustdoc/search.desc/svsm/: svsm-desc-0-.js
rustdoc/svsm/: all.html
rustdoc/svsm/io/: trait.IOPort.html
rustdoc/svsm/platform/: enum.PageValidateOp.html  enum.SvsmPlatformCell.html  fn.halt.html  fn.init_capabilities.html  fn.init_platform_type.html  index.html  trait.SvsmPlatform.html
scripts/: launch_guest.sh  test-in-svsm.sh
src/: svsm.rs
src/greq/: services.rs
virtio-drivers/src/hal/: fake.rs
virtio-drivers/src/transport/: fake.rs
(+62 files in other folders)
