[package]
name = "svsm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bitflags = "2.4"
intrusive-collections = { path = "external-crates/intrusive-rs" }
log = { version = "0.4.20", features = ["max_level_info", "release_max_level_info"] }
packit = { path = "external-crates/packit" }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }

[target."x86_64-unknown-none".dev-dependencies]
test = { version = "0.1.0", path = "test" }

[features]
default = ["enable-stacktrace"]
enable-stacktrace = []

[dev-dependencies]
memoffset = "0.9.0"
